Texture Coordinate node, From Instancer option do not work as expected in 2.8 #60646

Closed
opened 2019-01-19 09:53:10 +01:00 by Mihail · 5 comments

System Information
Operating system: Windows 7 SP1 (x64)
Graphics card: nVidia GeForce GTX 1080 Ti

Blender Version
Broken:
version: 2.80 (sub 41), branch: master, commit date: 2019-01-17 10:44, hash: ad707115d5, type: Release, build date: 17/01/2019, 03:08

Worked:
version: 2.79 (sub 0), branch: master, commit date: 2017-09-11 10:43, hash: 5bd8ac9, type: build, date: Mon 09/11/2017, 07:44 AM

Short description of error
In Shader Editor, Texture Coordinate node, option "From Instancer" ("From Dupli" in case of Blender 2.79) do not work in Blender 2.8 in case when we are trying to get surface color from particle emitter and use it in particle material when render particles/hairs as objects.
Attached overview image shows how same .blend file renders in 2.79 (cycles) and 2.8 (cycles and eevee).

Edit 28.01.2019 : In case of 2.8+Cycles issue only appears in viewport rendering mode. Full render works as expected.

Exact steps for others to reproduce the error
Attached .blend file and texture file with issues.

Steps from default scene:

  1. Add new Cube with "Generate UVs" option
  2. Create new texture image in Image Editor
  3. Create material for cube which is using new texture as color input in diffuse bsdf (UV as texture coordinate)
  4. In Texture Paint mode add some colors to Cube' texture
  5. Create a Plain with "Generate UVs" option
  6. Create material for new plain, add Texture Coordinate and Image Textude nodes, check "From Instancer" ("From Dupli" in 2.79), link UV output with Vector, select same image in Image Texture as in Cube material.
  7. Create Particle system for a Cube, check "Hair" as type of particle system, set Render -> Render As "Object", select Plain as object

IssueOverview.png

report.blend

EmitterSurface.png

system-info.txt

**System Information** Operating system: Windows 7 SP1 (x64) Graphics card: nVidia GeForce GTX 1080 Ti **Blender Version** Broken: version: 2.80 (sub 41), branch: master, commit date: 2019-01-17 10:44, hash: ad707115d5bc, type: Release, build date: 17/01/2019, 03:08 Worked: version: 2.79 (sub 0), branch: master, commit date: 2017-09-11 10:43, hash: 5bd8ac9, type: build, date: Mon 09/11/2017, 07:44 AM **Short description of error** In Shader Editor, Texture Coordinate node, option "From Instancer" ("From Dupli" in case of Blender 2.79) do not work in Blender 2.8 in case when we are trying to get surface color from particle emitter and use it in particle material when render particles/hairs as objects. Attached overview image shows how same .blend file renders in 2.79 (cycles) and 2.8 (cycles and eevee). Edit 28.01.2019 : In case of 2.8+Cycles issue only appears in viewport rendering mode. Full render works as expected. **Exact steps for others to reproduce the error** Attached .blend file and texture file with issues. Steps from default scene: 1. Add new Cube with "Generate UVs" option 2. Create new texture image in Image Editor 3. Create material for cube which is using new texture as color input in diffuse bsdf (UV as texture coordinate) 4. In Texture Paint mode add some colors to Cube' texture 5. Create a Plain with "Generate UVs" option 6. Create material for new plain, add Texture Coordinate and Image Textude nodes, check "From Instancer" ("From Dupli" in 2.79), link UV output with Vector, select same image in Image Texture as in Cube material. 7. Create Particle system for a Cube, check "Hair" as type of particle system, set Render -> Render As "Object", select Plain as object ![IssueOverview.png](https://archive.blender.org/developer/F6334369/IssueOverview.png) [report.blend](https://archive.blender.org/developer/F6334243/report.blend) ![EmitterSurface.png](https://archive.blender.org/developer/F6334245/EmitterSurface.png) [system-info.txt](https://archive.blender.org/developer/F6334249/system-info.txt)
Author

Added subscriber: @Maonyao

Added subscriber: @Maonyao
Sergey Sharybin was assigned by Sebastian Parborg 2019-01-28 15:11:09 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Actual cycles render seems to work fine (it is just viewport rendering that fails...)

Eevee: this is a know limitation for now, listed here https://docs.blender.org/manual/en/dev/render/eevee/materials/nodes_support.html#other-nodes-support
quote:

Texture Coordinate Node: From Dupli and coordinate from custom Object is not supported.

What is left: viewport rendering.
Similar case in #57922 (though not the same)

But I think what sill holds true is:

In #57922#556206, @lichtwerk wrote:
regarding 2.8 and viewport rendering: UVs are only calculated if we are in DAG_EVAL_RENDER mode (see here ), but we are in DAG_EVAL_VIEWPORT (even if set to cycles viewport rendering)

Actual cycles render seems to work fine (it is just viewport rendering that fails...) Eevee: this is a know limitation for now, listed here https://docs.blender.org/manual/en/dev/render/eevee/materials/nodes_support.html#other-nodes-support quote: > Texture Coordinate Node: From Dupli and coordinate from custom Object is not supported. What is left: viewport rendering. Similar case in #57922 (though not the same) But I think what sill holds true is: > In #57922#556206, @lichtwerk wrote: > regarding 2.8 and viewport rendering: UVs are only calculated if we are in `DAG_EVAL_RENDER` mode (see [here ](https://developer.blender.org/diffusion/B/browse/blender2.8/source/blender/blenkernel/intern/object_dupli.c;a29740e2904f12833a1c8d26926979a1cfb293da$800)), but we are in `DAG_EVAL_VIEWPORT` (even if set to cycles viewport rendering)

This issue was referenced by fc55861efa

This issue was referenced by fc55861efaa2b85cc7b2e11a9dabc2712cc8b8da

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60646
No description provided.